package com.fanstudy.designmode.adapter.objectAdapter;
//适配接口
public interface Voltage5V {

    int output5V();
}
